--- a/TestApi/TestApi.Infrastructure/TestApi.Infrastructure.csproj
+++ b/TestApi/TestApi.Infrastructure/TestApi.Infrastructure.csproj
@@ -8,6 +8,20 @@
 
   <ItemGroup>
     <Folder Include="Repositories\" />
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestApi.Domain\TestApi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
