--- a/TestApi/TestApi/TestApi.csproj
+++ b/TestApi/TestApi/TestApi.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TestApi.Bll\TestApi.Bll.csproj" />
     <ProjectReference Include="..\TestApi.Infrastructure\TestApi.Infrastructure.csproj" />
   </ItemGroup>
 
